@@ -1,3 +1,9 @@
+2005-06-30  Stephen Deasey  <sdeasey@users.sf.net>
+
+	* nsd/cookies.c (GetConn): No longer check whether the response
+	headers have already been sent for Tcl commands. The check was broken
+	and not useful.
+
 2005-06-30  Zoran Vasiljevic  <vasiljevic@users.sf.net>
 
 	* nsd/conn.c: fixed Bug #1230179 which caused the server crash
